book: Prep an example for deprecation of utf8_encode

--- a/book/index.html
+++ b/book/index.html
@@ -4402,7 +4402,7 @@ umwandeln, um sie später als vollständiges UTF-8 importieren zu können:</p>
 <pre class="snippet"><code id="utf8conv" class="php">&lt;?php<br>
 <br>
 $input&nbsp;&nbsp;=&nbsp;file_get_contents('dump-iso.sql');<br>
-$output&nbsp;=&nbsp;utf8_encode($input);<br>
+$output&nbsp;=&nbsp;@utf8_encode($input);<br>
 $fp&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;=&nbsp;fopen('dump-utf8.sql',&nbsp;'wb');<br>
 if&nbsp;($fp)&nbsp;{<br>
 &nbsp;&nbsp;fwrite($fp,&nbsp;$output);<br>
