site: Prep for 2023
prep for local Nunito fonts usage and
prep for local jquery + update to jquery.3.6.3

--- a/features/index.html
+++ b/features/index.html
@@ -12,7 +12,6 @@
     <meta property="og:image" content="https://ophian.github.io/i/styx-opengraph.jpg">
     <meta property="og:url" content="https://ophian.github.io/">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
     <link rel="stylesheet" href="/css/magnific-popup.css">
@@ -307,12 +306,12 @@
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2022 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2023 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
                     <li class="footer-policy__menu-item"><a href="/legal/">Legal</a></li>
-                    <li class="footer-policy__menu-item"><a href="/legal/privacy">Privacy policy</a></li>
+                    <li class="footer-policy__menu-item"><a href="/legal/privacy/">Privacy policy</a></li>
                     <li class="footer-policy__menu-item"><a href="https://opensource.org/docs/definition.php" target="_blank" rel="noopener">Open Source</a></li>
                 </ul>
             </div>
@@ -326,7 +325,7 @@
 </svg>
 
 <script src="/js/styx.min.js"></script>
-<script src="/js/jquery-3.6.0.min.js"></script>
+<script src="/js/jquery-3.6.3.min.js"></script>
 <script src="/js/jquery.magnific-popup.min.js"></script>
 <script>
     jQuery(document).ready(function(){
