--- a/hc/en/trackbacks-pingbacks-commentapi.html
+++ b/hc/en/trackbacks-pingbacks-commentapi.html
@@ -13,7 +13,6 @@
     <meta property="og:url" content="https://ophian.github.io/hc/en/trackbacks-pingbacks-commentapi.html">
     <link rel="canonical" href="https://ophian.github.io/hc/en/trackbacks-pingbacks-commentapi.html">
     <link rel="apple-touch-icon" href="/i/apple-touch-icon.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
 </head>
@@ -316,7 +315,7 @@
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2022 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2023 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
@@ -334,8 +333,7 @@
 	</svg>
 </svg>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/jquery-3.6.0.min.js"><\/script>')</script>
+<script src="/js/jquery-3.6.3.min.js"></script>
 <script src="/js/jquery.ui.totop.js" type="text/javascript"></script>
 <script> 
     $(function(){
