--- a/book/index.html
+++ b/book/index.html
@@ -22,7 +22,6 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="/book/css/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Nunito+Sans">
     <link rel="stylesheet" href="/css/libs.min.css">
     <link rel="stylesheet" href="/css/styx.min.css">
     <link rel="stylesheet" href="/book/css/book.min.css">
@@ -57652,7 +57651,7 @@ ist: Fragen Sie ruhig. Niemand beißt die Hand, die uns füttern soll!</p>
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2022 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2023 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
@@ -57686,8 +57685,7 @@ ist: Fragen Sie ruhig. Niemand beißt die Hand, die uns füttern soll!</p>
     </symbol>
 </svg>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>window.jQuery || document.write('<script src="/js/jquery-3.6.0.min.js"><\/script>')</script>
+<script src="/js/jquery-3.6.3.min.js"></script>
 <script src="/js/jquery.ui.totop.min.js" type="text/javascript"></script>
 <script src="/book/js/main.min.js" type="text/javascript"></script>
 <script>
