book::metadata: Not with me since it relies on the verb!!!!

--- a/book/index.html
+++ b/book/index.html
@@ -2616,7 +2616,7 @@ desto engmaschiger lassen sich alle Informationen des Internets
 miteinander verknüpfen - und das nun auch nicht mehr nur einseitig.</p>
 
 <p>Zum heutigen Zeitpunkt ist die Erfassung von Metadaten eine recht
-aufwändige Sache und obliegt dem Redakteur eines Textes. Daher sind
+aufwendige Sache und obliegt dem Redakteur eines Textes. Daher sind
 brauchbare RDF-Metadaten noch recht wenig verbreitet und
 <span class="tag-box invisible">
     <span class="inline-tag">Mikroformate</span>
