book::tagging: Be precise

--- a/book/index.html
+++ b/book/index.html
@@ -2648,11 +2648,10 @@ vornherein Gedanken über eine hierarchische Struktur seiner zukünftigen
 Texte machen zu müssen.</p>
 
 <p>Aus dieser Not heraus wurde das <em>Tagging</em> erfunden: Einem Artikel
-lässt sich so dynamisch eine beliebige Menge an Stichwörtern zuordnen.
+lässt sich so dynamisch eine beliebige Menge an Schlagwörtern zuordnen.
 Mit deren Hilfe kann sich ein Benutzer zu Artikeln
 weiterführen lassen, die dasselbe Stichwort tragen. Das geht zB. über
-<em>Tagwolken</em>, also
-Übersichten der meistgebrauchten Tags,
+<em>Tagwolken</em>, also Übersichten der meistgebrauchten Tags,
 die häufig durch unterschiedliche Schriftgrößen gewichtet werden.</p>
 
 <p>Gerade im Kontext von Foto-Providern wie Flickr ist Tagging sehr
