book::perms: Link to FAQ

--- a/book/index.html
+++ b/book/index.html
@@ -3466,6 +3466,9 @@ allerdings auch andere Benutzer auf demselben Server. Daher ist es besser, die
 Zugriffsrechte von Dateien und Verzeichnissen so strikt wie möglich zu setzen.
 Wie dies konkret bei Ihnen aussieht, klären Sie am besten mit Ihrem Provider.</p>
 
+<p>Als Beispielhaft gelten also <code>775</code> für Verzeichnisse und <code>644</code> für Dateien.
+Am besten konsultieren Sie die Serendipity Styx <a href="https://ophian.github.io/hc/en/faq/#docs-what-are-the-file-permissions-required-to-run-serendipity" target="_blank">FAQ</a> für mehr.</p>
+
 <p>Damit der Webserver Serendipity ausführen kann, benötigt er Leserechte für
 <em>alle</em> Dateien und Verzeichnisse. Um Serendipity zu installieren, braucht
 er zudem anfangs Schreibzugriff auf das Stammverzeichnis, damit er die Dateien
