--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1412,11 +1412,11 @@
         <h4 class="plugin_summary">OpenStreetMap integration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_osm</dt>
-            <dd class="plugin_version">Version 2.2.0 (GPL, Last Updated 2021-01-17)</dd>
-            <dd class="plugin_maintainers">Martin Sewelies</dd>
+            <dd class="plugin_version">Version 2.3.1 (GPL, Last Updated 2023-01-30)</dd>
+            <dd class="plugin_maintainers">Kathi Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
-        <p class="plugin_description">Provides an interactive map with *.gpx uploads and tagged geo data</p>
+        <p class="plugin_description">Provides an interactive map for *.gpx uploads and geo-tagged entries</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_osm.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_osm">GitHub</a></li>
@@ -1724,8 +1724,8 @@
         <h4 class="plugin_summary">Geo-JSON</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_geo_json</dt>
-            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2021-01-06)</dd>
-            <dd class="plugin_maintainers">Martin Sewelies</dd>
+            <dd class="plugin_version">Version 0.5 (GPL, Last Updated 2023-01-30)</dd>
+            <dd class="plugin_maintainers">Kathi Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
         <p class="plugin_description">Provides a JSON object with all geo data which can be processed by JavaScript.</p>
