--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1692,7 +1692,7 @@
         <h4 class="plugin_summary">Flattr</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_flattr</dt>
-            <dd class="plugin_version">Version 1.18 (GPL, Last Updated 2021-08-06)</dd>
+            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2023-01-30)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Joachim Breitner</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1728,7 +1728,7 @@
             <dd class="plugin_maintainers">Kathi Sewelies</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
-        <p class="plugin_description">Provides a JSON object with all geo data which can be processed by JavaScript.</p>
+        <p class="plugin_description">Provides a JSON object which contains all geographic data and can be processed with JavaScript</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_geo_json.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_geo_json">GitHub</a></li>
