hc::code-primer: Announce Styx 4.1 CBAfetchLimit move

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -181,7 +181,7 @@ print_r($entries);
   <li><code>$serendipity['max_last_modified']</code>: Amount of seconds how fresh an article must be, so that a comment to an entry will modify its LastModified-timestamp (default: 7 days)</li>
   <li><code>$serendipity['max_fetch_limit']</code>: In RSS-Feeds, how many entries can be fetched (default 50)</li>
   <li><code>$serendipity['trackback_filelimit']</code>: How large may an URL be to check for incoming trackback links (default 150kb)</li>
-  <li><code>$serendipity['CBAfetchLimit']</code>: [Styx 2.6.dev+] How many comments to display within comments_by_author shortcut pages (default 10). Recommended set: 20</li>
+  <li><code>$serendipity['CBAfetchLimit']</code>: [Styx 2.6.dev+] How many comments to display within comments_by_author shortcut pages (default 10). Recommended set: 20. Recommended set: 20. Up from Styx 4.1 this is moved as an configuration option to "Appearance and Options"</li>
   <li><code>$serendipity['use_PEAR']</code>: By default, Serendipity will use externally provided PEAR files (if existing). To force using the PEAR libraries bundled with Serendipity, set this variable to FALSE.</li>
   <li><code>$serendipity['useHTTP-Auth']</code>: If enabled (on by default, requires mod_php), users can log in to the Blog by specifying user/password in the URL like <strong>http://user:password@example.com/serendipity_admin.php</strong> (default true)</li>
   <li><code>$serendipity['cacheControl']</code>: (default true)</li>
