book: Preview ophian/styx@ff0bf9843607bcb3fa1392f0341a7a3451beb1f1

--- a/book/index.html
+++ b/book/index.html
@@ -5070,7 +5070,8 @@ spezifische Limitierung von 10 Kommentaren pro Seite, können aber über die
 manuell gesetzte <code class="nobreak">$serendipity['CBAfetchLimit']</code> Variable
 zB. in der serendipity_config_local.inc von Hand überschrieben werden. Als ein gutes
 Maß haben sich 20 Kommentare per Seite herausgestellt, deshalb ist es zu empfehlen
-diese Variable zu setzen, wenn Sie solcherlei Übersichten anbieten.</p>
+diese Variable zu setzen, wenn Sie solcherlei Übersichten anbieten. Ab Styx 4.1 wird
+dies zu einer normalen Konfigurationsoption.</p>
 
 <p>Diese Übersichtsseite ist bisher in wenigen Templates eingebaut und wird
 daher von Besuchern auch seltener genutzt.</p>
