--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -2344,11 +2344,11 @@
         <h4 class="plugin_summary">Thumbnail Page</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_thumbnails</dt>
-            <dd class="plugin_version">Version 1.4.3 (GPL, Last Updated 2020-12-15)</dd>
+            <dd class="plugin_version">Version 1.5.0 (GPL, Last Updated 2023-02-19)</dd>
             <dd class="plugin_maintainers">Cameron MacFarland</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">Shows a thumbnail page. Address is index.php?serendipity[page]=thumbs</p>
+        <p class="plugin_description">Shows a thumbnail page. Address is index.php?serendipity[tnpage]=thumbs</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_thumbnails.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_thumbnails">GitHub</a></li>
