--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -20,7 +20,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -236,7 +236,7 @@
         <h4 class="plugin_summary">Content Rewriter</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_contentrewrite</dt>
-            <dd class="plugin_version">Version 1.5.0 (GPL, Last Updated 2022-07-30)</dd>
+            <dd class="plugin_version">Version 1.5.1 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -364,7 +364,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 3.09 (GPL, Last Updated 2023-06-23)</dd>
+            <dd class="plugin_version">Version 3.10 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -380,7 +380,7 @@
         <h4 class="plugin_summary">My Mood</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mymood</dt>
-            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2021-08-07)</dd>
+            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Brett Profitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -864,7 +864,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1016,7 +1016,7 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2022-09-18)</dd>
+            <dd class="plugin_version">Version 1.9.5 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1232,7 +1232,7 @@
         <h4 class="plugin_summary">User Self-Registration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_adduser</dt>
-            <dd class="plugin_version">Version 2.53 (GPL, Last Updated 2022-08-22)</dd>
+            <dd class="plugin_version">Version 2.54 (GPL, Last Updated 2023-07-13)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1320,7 +1320,7 @@
             <dd class="plugin_maintainers">Wesley Hwang-Chung</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
-        <p class="plugin_description">Puts an HTML nugget on top or bottom of the page, or inside the page's HEAD tag</p>
+        <p class="plugin_description">Puts an HTML nugget on top or bottom of the page, or inside the page&#039;s HEAD tag</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_page_nugget.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_page_nugget">GitHub</a></li>
@@ -1348,9 +1348,9 @@
         <h4 class="plugin_summary">Links to next/previous entry</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrypaging</dt>
-            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2023-01-18)</dd>
+            <dd class="plugin_version">Version 1.83 (GPL, Last Updated 2023-07-13)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
         <p class="plugin_description">Allows viewing the next/previous entry when viewing</p>
         <ul class="plugin_actions">
@@ -1380,7 +1380,7 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 3.09 (GPL, Last Updated 2023-06-23)</dd>
+            <dd class="plugin_version">Version 3.10 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -1396,7 +1396,7 @@
         <h4 class="plugin_summary">My Mood</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mymood</dt>
-            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2021-08-07)</dd>
+            <dd class="plugin_version">Version 0.15 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Brett Profitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1544,7 +1544,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2023-01-11)</dd>
+            <dd class="plugin_version">Version 1.83 (GPL, Last Updated 2023-07-13)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9</dd>
         </dl>
@@ -1608,7 +1608,7 @@
         <h4 class="plugin_summary">flickr Photostream CSS</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_flickrcss</dt>
-            <dd class="plugin_version">Version 1.07 (GPL, Last Updated 2020-03-22)</dd>
+            <dd class="plugin_version">Version 1.08 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Michael Kaiser, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1776,7 +1776,7 @@
             <dd class="plugin_maintainers">Jude Anthony, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7</dd>
         </dl>
-        <p class="plugin_description">Group a category's entries in a frontpage box instead of the usual article listing. Supports nested newsboxes.</p>
+        <p class="plugin_description">Group a category&#039;s entries in a frontpage box instead of the usual article listing. Supports nested newsboxes.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_newsbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_newsbox">GitHub</a></li>
@@ -1889,7 +1889,7 @@
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_forum</dt>
             <dd class="plugin_version">Version 0.44 (GPL, Last Updated 2021-12-06)</dd>
-            <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Ian Styx</dd>
+            <dd class="plugin_maintainers">Alexander &#039;dma147&#039; Mieland, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Provides a complete discussion forum to your users. Can alternatively provide to mirror comments into a phpBB installation.</p>
@@ -1905,7 +1905,7 @@
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_downloadmanager</dt>
             <dd class="plugin_version">Version 1.61 (GPL, Last Updated 2022-10-17)</dd>
-            <dd class="plugin_maintainers">Alexander 'dma147' Mieland, Grischa Brockhaus, Ian Styx</dd>
+            <dd class="plugin_maintainers">Alexander &#039;dma147&#039; Mieland, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.3.0</dd>
         </dl>
         <p class="plugin_description">Provides full downloadmanager capabilities to your s9y. When uninstalling, all related tables will be dropped!</p>
@@ -1936,7 +1936,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2023-01-11)</dd>
+            <dd class="plugin_version">Version 1.83 (GPL, Last Updated 2023-07-13)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.9</dd>
         </dl>
@@ -2008,7 +2008,7 @@
             <dd class="plugin_maintainers">Malte Paskuda</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">Let user's edit their comments after they posted them.</p>
+        <p class="plugin_description">Let user&#039;s edit their comments after they posted them.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_commentedit.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_commentedit">GitHub</a></li>
@@ -2116,7 +2116,7 @@
         <h4 class="plugin_summary">Microblogging (Twitter,Identica)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_twitter</dt>
-            <dd class="plugin_version">Version 2.1.2 (GPL, Last Updated 2020-12-02)</dd>
+            <dd class="plugin_version">Version 2.1.2 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Peter Heimann, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
@@ -2136,7 +2136,7 @@
             <dd class="plugin_maintainers">Jude Anthony, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7</dd>
         </dl>
-        <p class="plugin_description">Group a category's entries in a frontpage box instead of the usual article listing. Supports nested newsboxes.</p>
+        <p class="plugin_description">Group a category&#039;s entries in a frontpage box instead of the usual article listing. Supports nested newsboxes.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_newsbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_newsbox">GitHub</a></li>
@@ -2300,7 +2300,7 @@
             <dd class="plugin_maintainers">Thomas Nesges, Andy Hopkins, Lokesh Dhakar, Cody Lindley, Stephan Manske, Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
-        <p class="plugin_description">Lightbox JS is a script used to overlay images (via Modal Overlay pattern) on the current page. It's a snap to setup and to pop-up images nicely. This plugin searches through your entries, and replaces every image 'a href=&quot;XXX&quot;' link to use the javascript display. So if you want your thumbnail images to popup large, you need to insert your images as links to the large version.</p>
+        <p class="plugin_description">Lightbox JS is a script used to overlay images (via Modal Overlay pattern) on the current page. It&#039;s a snap to setup and to pop-up images nicely. This plugin searches through your entries, and replaces every image &#039;a href=&quot;XXX&quot;&#039; link to use the javascript display. So if you want your thumbnail images to popup large, you need to insert your images as links to the large version.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_lightbox.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_lightbox">GitHub</a></li>
@@ -2560,7 +2560,7 @@
             <dd class="plugin_maintainers">Alex Gorbatchev (core), Brendon Kozlowski and J.M. Roth (plugin)</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
-        <p class="plugin_description">This plugin is a JavaScript code highlighter based on the code of the same name by Alex Gorbatchev.   This plugin takes less server-side resources than GeSHi and displays less markup in the actual HTML code.  It's a lighter, cleaner alternative. This plugin requires the supporting theme to provide the following hooks: frontend_header, frontend_footer (and optionally backend_preview on the administrative theme only).</p>
+        <p class="plugin_description">This plugin is a JavaScript code highlighter based on the code of the same name by Alex Gorbatchev.   This plugin takes less server-side resources than GeSHi and displays less markup in the actual HTML code.  It&#039;s a lighter, cleaner alternative. This plugin requires the supporting theme to provide the following hooks: frontend_header, frontend_footer (and optionally backend_preview on the administrative theme only).</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_dpsyntaxhighlighter.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_dpsyntaxhighlighter">GitHub</a></li>
@@ -2784,7 +2784,7 @@
         <h4 class="plugin_summary">Karma</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_karma</dt>
-            <dd class="plugin_version">Version 2.22 (GPL, Last Updated 2021-08-06)</dd>
+            <dd class="plugin_version">Version 2.23 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Judebert, Gregor Voeltz, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
