--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -268,9 +268,9 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Michael Kaiser, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
         <ul class="plugin_actions">
@@ -352,7 +352,7 @@
         <h4 class="plugin_summary">Shoutbox</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_shoutbox</dt>
-            <dd class="plugin_version">Version 1.05 (GPL, Last Updated 2021-01-11)</dd>
+            <dd class="plugin_version">Version 1.06 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Matthias Lange, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -468,7 +468,7 @@
         <h4 class="plugin_summary">Choose Language</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_multilingual</dt>
-            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2023-06-23)</dd>
+            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -585,8 +585,8 @@
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Displays all users with their ethics (represented by a traffic light). 
-                                   Green light means 'cool'; yellow light means 
-                                   'warning'; red light means 'banned'
+                                   Green light means &#039;cool&#039;; yellow light means 
+                                   &#039;warning&#039;; red light means &#039;banned&#039;
                                    The administrator can easily modify this value for each user.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_xsstrust.zip">Download</a></li>
@@ -699,9 +699,9 @@
         <h4 class="plugin_summary">flickr Photostream</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_flickr</dt>
-            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2019-08-09)</dd>
+            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2023-07-14)</dd>
             <dd class="plugin_maintainers">Michael Kaiser, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Display the latest photos from flickr Photostreams.</p>
         <ul class="plugin_actions">
