book: Update for new Styx logo

--- a/book/index.html
+++ b/book/index.html
@@ -39191,23 +39191,29 @@ der Oberfläche zur Konfiguration von Serendipity.</span>
 
 <p class="desc citem-desc">
 <span class="tag-box invisible">
-    <span class="inline-tag">Template-Dateien!s9y_banner_small.png</span>
+    <span class="inline-tag">Template-Dateien!styx_logo_150.png</span>
+    <span class="inline-tag">Template-Dateien!s9y_banner_small.png (deprecated)</span>
 </span>
-<code class="item file">img/s9y_banner_small.png</code>
+<code class="item file">../styx_logo_150.png</code>
+<code class="item file">img/s9y_banner_small.png (deprecated)</code>
 <span class="desc-info">
     <span class="box">
-        Zeigt ein kleines Werbebanner für Serendipity, das vom Plugin <em>Powered by</em>
-        (siehe Seite <span class="pageref"><a href="#plugplugin">plugplugin</a></span>)
-        in der Seitenleiste dargestellt werden kann.
+        Zeigt ein kleines Werbebanner für Serendipity Styx, das vom Plugin <em>Powered
+        by</em> (siehe Seite <span class="pageref"><a href="#plugplugin">plugplugin</a></span>)
+        in der Seitenleiste dargestellt werden kann. Ab Serendipity Styx 4.2 wird dies
+        offiziell durch das neue Styx Logo in templates/ ersetzt und das alte S9y Logo als
+        deprecated zurückgestuft. Styx 5.0 wird es dann komplett in allen Vorkommen entfernen.
     </span>
 
     <span class="box">
         Dasselbe Logo ist aus Vereinfachungsgründen auch generell unter
-        <code class="item file">/templates/s9y_banner_small.png</code> erreichbar,
+        <code class="item file">/templates/styx_logo_150.png</code> bzw
+        <code class="item file">/templates/s9y_banner_small.png</code> (deprecated) erreichbar,
         ebenso wie die systemweite <code class="item file">/templates/jquery.js</code>
         Library zur automagischen Einbindung in Themes. Siehe Javascripts 9.4.7.
     </span>
-</span></p>
+</span>
+</p>
 
 <p class="desc citem-desc">
 <span class="tag-box invisible">
