--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1576,8 +1576,8 @@
         <h4 class="plugin_summary">Sitemap Generator (for Crawlers)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_google_sitemap</dt>
-            <dd class="plugin_version">Version 0.71 (GPL, Last Updated 2023-07-30)</dd>
-            <dd class="plugin_maintainers">Boris</dd>
+            <dd class="plugin_version">Version 0.72 (GPL, Last Updated 2023-07-31)</dd>
+            <dd class="plugin_maintainers">Boris, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
         <p class="plugin_description">Creates a sitemap.xml.gz, which can be used by miscellaneous Web-Crawlers. (Google, MSN, Yahoo and Ask)</p>
