site: Some minor enhancements to 0c5149d23e3f3fcd69d874a8154ef1d05edcc216

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -181,25 +181,25 @@
 
                     <ol>
                         <li>Write or add text block for first paragraph by [CTRL] + [v] ( or the Apple MAC equivalent [command] + [v] )</li>
-                        <li>Place cursor at text start and hit RETURN-key ("ENTER") (<em>line jumps down</em>).<br>
-                        Then hit BACKSPACE-key (<em>line jumps up again</em>).<br>
+                        <li>Place cursor at text start and hit RETURN-key ("ENTER") (<em>Editor line jumps down</em>).<br>
+                        Then hit BACKSPACE-key (<em>Editor line jumps up again</em>).<br>
                         Do not view by SOURCE at this moment and wait doing this.... It now is paragraph’ed.</li>
                         <li>This was starting a text block without keyboard-actions first. The other was already described in Stockholm Lecture Lessons I. Now we resume.</li>
                         <li>Place cursor at text end.<br>
                         Hit the keyboard RETURN-key ("ENTER").<br>
                         Then select an image to the entry.</li>
-                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red line appears. Click on it. (<em>The line jumps down.</em>)<br>
+                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red line appears. Click on it. (<em>The editor line jumps down.</em>)<br>
                         Select a next image.</li>
                         <li>Scroll down as much as you can. It now is different to the first, since there will be a next added (empty) line under the last image and you will not see a red line, hovering over !!!<br>
                         Place your cursor at the far most ending space.<br>
-                        Hit BACKSPACE-key. (<em>The line jumps one up and the red line will appear. If not, there was an additional space added, which now was deleted by the this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
-                        Hit the red line (<em>and the line jumps down</em>).<br>
+                        Hit BACKSPACE-key. (<em>The editor line jumps one up and the red magic line will appear. If not, there was an additional space added, which now was deleted by the this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
+                        Hit the red line (<em>and the editor line jumps down</em>).<br>
                         Select another image.</li>
                         <li>Run N° 6 again for the fourth image to add</li>
                         <li>Run N° 6 again for the fifth image to add</li>
                         <li>Scrolling down again, place your cursor into the last available line.<br>
-                        Hit RETURN-key ("ENTER"). (<em>Line jumps down.</em>)<br>
-                        Hit BACKSPACE-key. (<em>Line jumps up again.</em>)<br>
+                        Hit RETURN-key ("ENTER"). (<em>Editor line jumps down.</em>)<br>
+                        Hit BACKSPACE-key. (<em>Editor line jumps up again.</em>)<br>
                         Insert text for paragraph. (<em>no additional space or line after that</em>)</li>
                     </ol>
 
