--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -236,7 +236,7 @@
 
                     <p>At this state is is good to know that this RichText-Editor has a "butler" (which is called "ACF"). This "butler" checks for (un-)valid code and then tries to repair it. These repairs don't always look like clean and straight HTML, but are at least valid, since unbroken. These automatic ACF (<em>cleanup</em>) actions always happen when you switch between the <em><strong>RichText-view-mode</strong></em> and the <em><strong>Source-view-mode</strong></em> and vice versa <strong>and</strong> when you <strong>save</strong> your entry.</p>
 
-                    <p>&nbsp;</p>
+                    <p>To be continued...</p>
                 </div>
             </div>
         </div>
