site: Improve 0c5149d23e3f3fcd69d874a8154ef1d05edcc216 for red magic line and the copy example text

--- a/hc/en/the-stockholm-lessons.html
+++ b/hc/en/the-stockholm-lessons.html
@@ -114,7 +114,7 @@
 
                     <p><u>Example Text for copy:</u></p>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus nisi sit amet turpis placerat lacinia sit amet at lacus. Cras nec porta nisi. Aliquam lobortis nisi eget turpis blandit rhoncus. Cras placerat accumsan lacus, tristique pellentesque tortor condimentum ut. In hac habitasse platea dictumst. Integer fermentum, velit a vehicula porttitor, leo nunc imperdiet est, vitae imperdiet ipsum velit a sapien. Nulla quis justo in magna porttitor sodales eu non sapien. Sed consequat lectus diam, vehicula dictum nulla. Sed rutrum mollis enim, in posuere tortor congue sed. Duis ante arcu, bibendum sit amet eleifend ac, molestie eget elit. Integer risus lacus, dapibus ut commodo eu, laoreet at odio. Curabitur varius, urna ac tincidunt gravida, eros dui consectetur nunc, euismod consequat turpis urna non libero.</p>
+                    <p><pre><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas luctus nisi sit amet turpis placerat lacinia sit amet at lacus. Cras nec porta nisi. Aliquam lobortis nisi eget turpis blandit rhoncus. Cras placerat accumsan lacus, tristique pellentesque tortor condimentum ut. In hac habitasse platea dictumst. Integer fermentum, velit a vehicula porttitor, leo nunc imperdiet est, vitae imperdiet ipsum velit a sapien. Nulla quis justo in magna porttitor sodales eu non sapien. Sed consequat lectus diam, vehicula dictum nulla. Sed rutrum mollis enim, in posuere tortor congue sed. Duis ante arcu, bibendum sit amet eleifend ac, molestie eget elit. Integer risus lacus, dapibus ut commodo eu, laoreet at odio. Curabitur varius, urna ac tincidunt gravida, eros dui consectetur nunc, euismod consequat turpis urna non libero.</code></pre></p>
 
                     <p>Paste the copied text to your new entry.<br>
                     Click on the blog editors "Source" button and view the result.<br>
@@ -188,12 +188,12 @@
                         <li>Place cursor at text end.<br>
                         Hit the keyboard RETURN-key ("ENTER").<br>
                         Then select an image to the entry.</li>
-                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red line appears. Click on it. (<em>The editor line jumps down.</em>)<br>
+                        <li>Scroll down, or hover the mouse over the end of the image or place the cursor at end of your first added image - a red magic line appears. Click on it. (<em>The editor line jumps down.</em>)<br>
                         Select a next image.</li>
                         <li>Scroll down as much as you can. It now is different to the first, since there will be a next added (empty) line under the last image and you will not see a red line, hovering over !!!<br>
                         Place your cursor at the far most ending space.<br>
                         Hit BACKSPACE-key. (<em>The editor line jumps one up and the red magic line will appear. If not, there was an additional space added, which now was deleted by the this first BACKSPACE-key action. In this case just hit BACKSPACE-key </em>again.)<br>
-                        Hit the red line (<em>and the editor line jumps down</em>).<br>
+                        Hit the red magic line (<em>and the editor line jumps down</em>).<br>
                         Select another image.</li>
                         <li>Run N° 6 again for the fourth image to add</li>
                         <li>Run N° 6 again for the fifth image to add</li>
